--- a/frontend/src/ui/components/loginPage/register/register.css
+++ b/frontend/src/ui/components/loginPage/register/register.css
@@ -1,4 +1,9 @@
-.container {
-  margin-top: 3em;
-  margin-bottom: 3em;
+.section {
+  padding-right: 20%;
+}
+
+.well {
+  height: 25em;
+  width: 25em;
+  border-radius: 2em;
 }
